--- a/consumers.cabal
+++ b/consumers.cabal
@@ -1,5 +1,5 @@
 name:               consumers
-version:            1.0
+version:            1.1
 synopsis:           Concurrent PostgreSQL data consumers
 description:        Library for setting up concurrent consumers of data stored inside PostgreSQL database in a simple, declarative manner.
 homepage:           https://github.com/scrive/consumers
@@ -28,7 +28,7 @@ library
                     hpqtypes >=1.4,
                     lifted-base,
                     lifted-threads,
-                    log,
+                    log >= 0.4,
                     monad-control,
                     mtl,
                     stm,
