--- a/consumers.cabal
+++ b/consumers.cabal
@@ -40,14 +40,14 @@ library
   ghc-options:      -O2 -Wall -funbox-strict-fields
 
   default-language: Haskell2010
-  default-extensions:
-    DeriveDataTypeable,
-    FlexibleContexts,
-    GeneralizedNewtypeDeriving,
-    OverloadedStrings,
-    RankNTypes,
-    RecordWildCards,
-    ScopedTypeVariables,
-    TupleSections,
-    TypeFamilies,
-    UndecidableInstances
+  default-extensions: DeriveDataTypeable
+                    , FlexibleContexts
+                    , GeneralizedNewtypeDeriving
+                    , NoImplicitPrelude
+                    , OverloadedStrings
+                    , RankNTypes
+                    , RecordWildCards
+                    , ScopedTypeVariables
+                    , TupleSections
+                    , TypeFamilies
+                    , UndecidableInstances
