--- a/consumers.cabal
+++ b/consumers.cabal
@@ -6,7 +6,7 @@ homepage:           https://github.com/scrive/consumers
 license:            BSD3
 license-file:       LICENSE
 author:             Scrive
-maintainer:         Andrzej Rybczak <andrzej@scrive.com>
+maintainer:         Andrzej Rybczak <andrzej@rybczak.net>
 category:           Concurrency, Database
 build-type:         Simple
 cabal-version:      >=1.10
