--- a/.travis.yml
+++ b/.travis.yml
@@ -14,19 +14,19 @@ before_cache:
 
 matrix:
   include:
-    - env: CABALVER=1.24 GHCVER=7.4.2
+    - env: CABALVER=head GHCVER=7.4.2
       compiler: ": #GHC 7.4.2"
       addons: {apt: {packages: [cabal-install-head,ghc-7.4.2], sources: [hvr-ghc]}}
-    - env: CABALVER=1.24 GHCVER=7.6.3
+    - env: CABALVER=head GHCVER=7.6.3
       compiler: ": #GHC 7.6.3"
       addons: {apt: {packages: [cabal-install-head,ghc-7.6.3], sources: [hvr-ghc]}}
-    - env: CABALVER=1.24 GHCVER=7.8.4
+    - env: CABALVER=head GHCVER=7.8.4
       compiler: ": #GHC 7.8.4"
       addons: {apt: {packages: [cabal-install-head,ghc-7.8.4], sources: [hvr-ghc]}}
-    - env: CABALVER=1.24 GHCVER=7.10.2
+    - env: CABALVER=head GHCVER=7.10.2
       compiler: ": #GHC 7.10.2"
       addons: {apt: {packages: [cabal-install-head,ghc-7.10.2], sources: [hvr-ghc]}}
-    - env: CABALVER=1.24 GHCVER=8.0.1
+    - env: CABALVER=head GHCVER=8.0.1
       compiler: ": #GHC 8.0.1"
       addons: {apt: {packages: [cabal-install-head,ghc-8.0.1], sources: [hvr-ghc]}}
 
