--- a/consumers.cabal
+++ b/consumers.cabal
@@ -5,12 +5,13 @@ description:        Library for setting up concurrent consumers of data stored i
 homepage:           https://github.com/scrive/consumers
 license:            BSD3
 license-file:       LICENSE
-author:             Scrive
+author:             Scrive AB
 maintainer:         Andrzej Rybczak <andrzej@rybczak.net>, Jonathan Jouty <jonathan@scrive.com>
+copyright:          Scrive AB
 category:           Concurrency, Database
 build-type:         Simple
 cabal-version:      >=1.10
-tested-with:        GHC == 7.4.2, GHC == 7.6.3, GHC == 7.8.4, GHC == 7.10.3, GHC == 8.0.1
+tested-with:        GHC == 7.8.4, GHC == 7.10.3, GHC == 8.0.1
 
 Source-repository head
   Type:             git
