--- a/consumers.cabal
+++ b/consumers.cabal
@@ -1,7 +1,11 @@
 name:               consumers
 version:            2.0
 synopsis:           Concurrent PostgreSQL data consumers
-description:        Library for setting up concurrent consumers of data stored inside PostgreSQL database in a simple, declarative manner.
+
+description:        Library for setting up concurrent consumers of data
+                    stored inside PostgreSQL database in a simple,
+                    declarative manner.
+
 homepage:           https://github.com/scrive/consumers
 license:            BSD3
 license-file:       LICENSE
@@ -30,7 +34,7 @@ library
                     hpqtypes >=1.5,
                     lifted-base,
                     lifted-threads,
-                    log >= 0.4,
+                    log >= 0.5,
                     monad-control,
                     mtl,
                     stm,
