--- a/consumers.cabal
+++ b/consumers.cabal
@@ -17,7 +17,7 @@ copyright:          Scrive AB
 category:           Concurrency, Database
 build-type:         Simple
 cabal-version:      >=1.10
-tested-with:        GHC == 7.8.4, GHC == 7.10.3, GHC == 8.0.2, GHC == 8.2.1
+tested-with:        GHC == 7.10.3, GHC == 8.0.2, GHC == 8.2.1
 
 Source-repository head
   Type:             git
