Cleanup db after testing, also make test into HUnit

--- a/consumers.cabal
+++ b/consumers.cabal
@@ -88,6 +88,7 @@ test-suite consumers-test
   build-depends:      base,
                       consumers,
                       exceptions,
+                      HUnit,
                       hpqtypes,
                       hpqtypes-extras,
                       log-base,
