--- a/consumers.cabal
+++ b/consumers.cabal
@@ -1,5 +1,5 @@
 name:               consumers
-version:            2.1.0.0
+version:            2.1.1.0
 synopsis:           Concurrent PostgreSQL data consumers
 
 description:        Library for setting up concurrent consumers of data
@@ -18,7 +18,8 @@ copyright:          Scrive AB
 category:           Concurrency, Database
 build-type:         Simple
 cabal-version:      >=1.10
-tested-with:        GHC == 7.10.3, GHC == 8.0.2, GHC == 8.2.1
+tested-with:        GHC == 7.10.3, GHC == 8.0.2, GHC == 8.2.2,
+                    GHC == 8.4.1
 
 Source-repository head
   Type:             git
@@ -35,7 +36,7 @@ library
                     containers,
                     exceptions,
                     extra,
-                    hpqtypes >=1.5,
+                    hpqtypes >= 1.5,
                     lifted-base,
                     lifted-threads,
                     log-base >= 0.7,
