--- a/consumers.cabal
+++ b/consumers.cabal
@@ -1,5 +1,5 @@
 name:               consumers
-version:            2.1.1.0
+version:            2.1.2.0
 synopsis:           Concurrent PostgreSQL data consumers
 
 description:        Library for setting up concurrent consumers of data
@@ -18,8 +18,7 @@ copyright:          Scrive AB
 category:           Concurrency, Database
 build-type:         Simple
 cabal-version:      >=1.10
-tested-with:        GHC == 7.10.3, GHC == 8.0.2, GHC == 8.2.2,
-                    GHC == 8.4.1
+tested-with:        GHC == 8.0.2, GHC == 8.2.2, GHC == 8.4.3
 
 Source-repository head
   Type:             git
@@ -32,11 +31,11 @@ library
                     Database.PostgreSQL.Consumers.Components,
                     Database.PostgreSQL.Consumers.Utils
 
-  build-depends:    base <5,
+  build-depends:    base >4 && <5,
                     containers,
                     exceptions,
                     extra,
-                    hpqtypes >= 1.5,
+                    hpqtypes >= 1.6 && < 1.7,
                     lifted-base,
                     lifted-threads,
                     log-base >= 0.7,
