--- a/consumers.cabal
+++ b/consumers.cabal
@@ -18,7 +18,7 @@ copyright:          Scrive AB
 category:           Concurrency, Database
 build-type:         Simple
 cabal-version:      >=1.10
-tested-with:        GHC == 8.0.2, GHC == 8.2.2, GHC == 8.4.4, GHC == 8.6.2
+tested-with:        GHC ==8.0.2 || ==8.2.2 || ==8.4.4 || ==8.6.5 || ==8.8.3 || ==8.10.1
 
 Source-repository head
   Type:             git
@@ -48,7 +48,7 @@ library
 
   hs-source-dirs:   src
 
-  ghc-options:      -O2 -Wall -funbox-strict-fields
+  ghc-options:      -Wall
 
   default-language: Haskell2010
   default-extensions: DeriveDataTypeable
