--- a/consumers.cabal
+++ b/consumers.cabal
@@ -34,6 +34,7 @@ library
   build-depends:    base              >= 4.13   && < 5
                   , containers        >= 0.5    && < 0.7
                   , exceptions        >= 0.10   && < 0.11
+                  , text
                   , extra             >= 1.6    && < 1.8
                   , hpqtypes          >= 1.11   && < 2.0
                   , lifted-base       >= 0.2    && < 0.3
