--- a/consumers.cabal
+++ b/consumers.cabal
@@ -35,6 +35,7 @@ library
   build-depends:    base              >= 4.13   && < 5
                   , containers        >= 0.5
                   , exceptions        >= 0.10
+                  , hashable          >= 1.4.4
                   , hpqtypes          >= 1.11
                   , lifted-base       >= 0.2
                   , lifted-threads    >= 1.0
@@ -43,6 +44,7 @@ library
                   , monad-time        >= 0.4
                   , mtl               >= 2.2
                   , stm               >= 2.4
+                  , text              >= 1.3
                   , time              >= 1.6
                   , transformers-base >= 0.4
 
