--- a/consumers.cabal
+++ b/consumers.cabal
@@ -1,5 +1,5 @@
 name:               consumers
-version:            2.3.1.0
+version:            2.3.2.0
 synopsis:           Concurrent PostgreSQL data consumers
 
 description:        Library for setting up concurrent consumers of data
@@ -43,6 +43,7 @@ library
                   , monad-time        >= 0.4
                   , mtl               >= 2.2
                   , stm               >= 2.4
+                  , text              >= 1.2
                   , time              >= 1.6
                   , transformers-base >= 0.4
 
