--- a/consumers.cabal
+++ b/consumers.cabal
@@ -72,9 +72,7 @@ library
   hs-source-dirs:   src
 
 test-suite consumers-example
-  import:           language
-
-  ghc-options:        -threaded
+  ghc-options:        -threaded -Wall -Wcompat
 
   build-depends:      base,
                       consumers,
@@ -87,11 +85,13 @@ test-suite consumers-example
 
   hs-source-dirs:     example
 
+  default-language:   Haskell2010
+
   type:               exitcode-stdio-1.0
   main-is:            Example.hs
 
 test-suite consumers-test
-  import:           language
+  import:             language
 
   ghc-options:        -threaded
 
