--- a/consumers-metrics-prometheus/consumers-metrics-prometheus.cabal
+++ b/consumers-metrics-prometheus/consumers-metrics-prometheus.cabal
@@ -1,9 +1,10 @@
 cabal-version:      3.0
 name:               consumers-metrics-prometheus
 version:            1.0.0.0
-synopsis:           TODO
+synopsis:           Prometheus metrics for the consumers library
 
-description:        TODO
+description:        Provides seamless instrumentation of your existing
+                    consumers using Prometheus
 
 homepage:           https://github.com/scrive/consumers
 license:            BSD-3-Clause
