--- a/consumers-metrics-prometheus/consumers-metrics-prometheus.cabal
+++ b/consumers-metrics-prometheus/consumers-metrics-prometheus.cabal
@@ -16,7 +16,7 @@ maintainer:         Andrzej Rybczak <andrzej@rybczak.net>,
 copyright:          Scrive AB
 category:           Concurrency, Database
 build-type:         Simple
-tested-with:        GHC == { 8.10.7, 9.0.2, 9.2.8, 9.4.8, 9.6.6, 9.8.2, 9.10.1 }
+tested-with:        GHC == { 8.10.7, 9.0.2, 9.2.8, 9.4.8, 9.6.6, 9.8.4, 9.10.1, 9.12.1 }
 
 bug-reports:   https://github.com/scrive/consumers/issues
 source-repository head
