--- a/consumers/consumers.cabal
+++ b/consumers/consumers.cabal
@@ -1,6 +1,6 @@
 cabal-version:      3.0
 name:               consumers
-version:            2.3.3.0
+version:            2.3.3.1
 synopsis:           Concurrent PostgreSQL data consumers
 
 description:        Library for setting up concurrent consumers of data
@@ -78,7 +78,7 @@ test-suite consumers-example
   build-depends:      base,
                       consumers,
                       hpqtypes,
-                      hpqtypes-extras,
+                      hpqtypes-extras >= 1.17.0.1,
                       log-base,
                       text
 
